# tauri

./: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
public/: mxmuban.docx  tzmuban.docx
src/: App.vue  main.ts  styles.css
src-tauri/: Cargo.toml  null  tauri.conf.json
src-tauri/icons/: myicon.icns
src/assets/: device.json
src/router/: index.ts
src/store/: index.ts
src/types/: index.d.ts
src/views/check/: exportDocx.ts  index.vue
src/views/home/: index.vue
src/views/home/components/: mid.vue
~/.tauri/: myapp.key  myapp.key.pub
